ecmascript/parser/tests/test262-error-references/fail/ac1ee2739ad30d66.js.stderr
error: Unterminated block comment
 --> $DIR/tests/test262-parser/fail/ac1ee2739ad30d66.js:1:1
  |
1 | /*
  | ^^

